public class Account
{
    private String website;
    private String user;
    private String password;
    private String email;

    public String getUser(){ 

    }

    public String getWebsite(){ 

    }

    public String getPassword(){

    }

    public String getEmail(){
        
    }
    
    public void setUser(String input){

    }

    public void setWebsite(String input){ 

    }

    public void setPassword(String input){

    }

    public void setEmail(String input){
        
    }

}
