/*
 * To change this license header, choose License Headers in Project Properties.
 * To change this template file, choose Tools | Templates
 * and open the template in the editor.
 */

/**
 *
 * @author Chidie17
 */
public abstract class AcctView extends UI{
    private String accountName;
    private String userName;
    private String password;
    private String url;
    private String expires;
    private String notes;
    
    public String getAcct(){};
}
