import java.util.ArrayList;

public class BluetoothIO
{
    public BluetoothIO(){

    }

    public ArrayList<DongleAddress> searchDongle(){

    }

    public void selectDongle(DongleAddress addr){

    }

    public void keyboardInput(String input){

    }

    private void pairDongle(DongleAddress addr){

    }
}
