public class DBLoginView
{
    public String inputPass(){

    }

}
