public class Database
{
    private Directory root = new Directory();

    public Directory getRoot(){
        return root;
    }

}
