import java.util.List;

public class Directory
{
    private String name;
    private List<Account> entries;
    private List<Directory> directories;

    public List<Account> getAccountListNames(){

    }

    public Account getAccount(int index){ // getting an entry from the list

    }

    public void addAccount(Account input){ //should we pass the entire database or only specific interfaces?

    }

    public void addDirectory(Directory input){

    }

    public String getName(){

    }

    public void setName(String input){
        
    }
}
