class ListAcctView {

    private Database db;

    public void setDatabase(Database db){
        this.db = db;
    }

    public void printAcctDirName(){

    }
    
    public void showEntry(){

    }

    public Account enterEntry(){

    }

    public void inputAcct(){

    }

    public void jumpToLetter(){

    }
}
