class PassGenView{
    private String password;
    private boolean capital;
    private boolean special;
    private int length;

    public String getPass(){
        return password;
    }
    public void inputPassword(){

    }

    public void printPassword(){

    }

    public void generatePassword(){

    }

    public void capitalize(){

    }

    public void specialChars(){
        
    }

    public void setSlider(){
        
    }
}
